Closed Bug 1671908 Opened 5 years ago Closed 5 years ago

URL query parser should not have ASCII fast path when the encoding is ISO-2022-JP

Categories

(Core :: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox84 --- fixed

People

(Reporter: annevk, Assigned: hsivonen)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

See https://github.com/whatwg/url/issues/557 for some context. The basic problem is that U+000E (and two other ASCII code points) are an error when encoding as ISO-2022-JP as their corresponding bytes indicate a state switch. Instead we should emit the ISO-2022-JP percent-encoded equivalent of U+FFFD.

This also happens in other browsers, but hopefully the risk is small enough that it's worth addressing this.

(I'll file bugs on other browsers when I (or someone else) get(s) to addressing that standard issue above.)

Assignee: nobody → hsivonen
Status: NEW → ASSIGNED
Severity: -- → S3
Priority: -- → P2
Whiteboard: [necko-triaged]
Pushed by hsivonen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0ade4b1a15d7 Take ISO-2022-JP ASCII overlap into account when encoding URL query strings. r=necko-reviewers,valentin
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: