Bug 1671908 - Take ISO-2022-JP ASCII overlap into account when encoding URL query strings. r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D93994